--- a/src/app/Components/pokemon-list/pokemon-list.component.html
+++ b/src/app/Components/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,16 @@
+<div>
+    <h3>Pokemons</h3>
+</div>
 
-<h3>Pokemon</h3>
-<app-pokemon-item></app-pokemon-item>
-<app-pokemon-item></app-pokemon-item>
-<app-pokemon-item></app-pokemon-item>
-<app-pokemon-item></app-pokemon-item>
+<div class="row">
+    <div class="col-10">
+        <input type="text" (input)="onPokemonChange($event)">
+        
+    </div>
+    <div class="col-2">
+        <button (click)="onAddButtonClick()"  class="btn btn-primary">➕</button>
+    </div>
+    <div *ngIf ="pokemonAdded"> Un pokémon a été ajouté </div>
+</div>
+<ng-container *ngFor ="let pokemon of pokemons; let i = index">{{pokemons[i]}}
+<app-pokemon-item ></app-pokemon-item></ng-container>
