--- a/src/app/Components/pokemon-item.component.html
+++ b/src/app/Components/pokemon-item.component.html
@@ -1,1 +1,8 @@
-<div class="p-3 pokemon-{{sex}}">{{ getName() }}</div>
+<div class="p-3 pokemon-{{sex}} row" appHightlightBackgroundColor [defaultColor]="sex==='male'?'blue' :'pink'" [highlightColor]="sex === 'male'? 'darkblue' :'purple'">
+    <div class="col-9 d-flex align-items-center">{{ name }}
+    </div>
+    <div class="col-3">
+        <Button class="btn btn-primary" (click)="onDeletePokemon()">Supprimer
+        </Button>
+    </div>
+</div>
