--- a/src/app/Components/pokemon-list/pokemon-list.component.html
+++ b/src/app/Components/pokemon-list/pokemon-list.component.html
@@ -1,16 +1,24 @@
 <div>
-    <h3>Pokemons</h3>
+    <h2>Pokemons</h2>
 </div>
 
 <div class="row">
     <div class="col-10">
-        <input type="text" (input)="onPokemonChange($event)">
-        
+        <input class="form-control" type="text" (input)="onPokemonChange($event)">        
     </div>
+
     <div class="col-2">
-        <button (click)="onAddButtonClick()"  class="btn btn-primary">➕</button>
+        <button (click)="onAddButtonClick()"  class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+          </svg></button>
     </div>
-    <div *ngIf ="pokemonAdded"> Un pokémon a été ajouté </div>
+
+    <div *ngIf ="pokemonAdded" class="mt-2 mb-2"> Un pokémon a été ajouté </div>
 </div>
-<ng-container *ngFor ="let pokemon of pokemons; let i = index">{{pokemons[i]}}
-<app-pokemon-item ></app-pokemon-item></ng-container>
+<ng-container *ngFor ="let pokemon of pokemons; let i = index">
+<app-pokemon-item (deletePokemon)="onDeletePokemon($event,i)" [name]="pokemon"></app-pokemon-item>
+</ng-container>
+
+<ngb-toast class="app-toast" header="Suppression" *ngIf="deletedPokemonName" (hide)="deletedPokemonName = ''">
+Le Pokemon {{ deletedPokemonName}} à ete supprimé</ngb-toast>
