--- a/src/app/Components/pokemon-list/pokemon-list.component.html
+++ b/src/app/Components/pokemon-list/pokemon-list.component.html
@@ -8,10 +8,7 @@
     </div>
 
     <div class="col-2">
-        <button (click)="onAddButtonClick()"  class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-          </svg></button>
+        <button (click)="onAddButtonClick()" [disabled]="!canClickButton" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" height="18" width="16" viewBox="0 0 448 512"><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg></button>
     </div>
 
     <div *ngIf ="pokemonAdded" class="mt-2 mb-2"> Un pokémon a été ajouté </div>
