--- a/src/app/Components/pokemon-list/pokemon-list.component.html
+++ b/src/app/Components/pokemon-list/pokemon-list.component.html
@@ -1,3 +1,6 @@
+
+<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+
 <div>
     <h2>Pokemons</h2>
 </div>
@@ -14,8 +17,5 @@
     <div *ngIf ="pokemonAdded" class="mt-2 mb-2"> Un pokémon a été ajouté </div>
 </div>
 <ng-container *ngFor ="let pokemon of pokemons; let i = index">
-<app-pokemon-item (deletePokemon)="onDeletePokemon($event,i)" [name]="pokemon"></app-pokemon-item>
+<app-pokemon-item (deletePokemon)="onDeletePokemon($event, i)" [name]="pokemon"></app-pokemon-item>
 </ng-container>
-
-<ngb-toast class="app-toast" header="Suppression" *ngIf="deletedPokemonName" (hide)="deletedPokemonName = ''">
-Le Pokemon {{ deletedPokemonName}} à ete supprimé</ngb-toast>
