--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
 <div class="container pt-4">
-      
-     <app-pokemon-list></app-pokemon-list>
+
+     <div class="mt-2 mb-2">
+          <h2>Pokemons</h2>
+     </div>
+
+     <ul ngbNav #nav="ngbNav" class="nav-tabs">
+          <li ngbNavItem>
+               <button ngbNavLink >Pokémons</button>
+               <ng-template ngbNavContent>
+                    <app-pokemon-list></app-pokemon-list>
+               </ng-template>
+
+          </li>
+          <li ngbNavItem>
+               <button ngbNavLink>Top pokémons</button>
+               <ng-template ngbNavContent>
+                    <app-pokemon-top ></app-pokemon-top>
+               </ng-template>
+          </li>
+     </ul>
+     <div [ngbNavOutlet]="nav"></div>
 </div>
