--- a/src/app/Components/pokemon-top/pokemon-top.component.html
+++ b/src/app/Components/pokemon-top/pokemon-top.component.html
@@ -1,5 +1,13 @@
 <div class="row mt-2 mb-2">
-    <ng-container *ngFor="let pokemon of pokemons; let i = index;">
-        <div *ngIf="i<3"> <app-pokemon-item [pokemonIndex]="i + 1" [pokemon]="pokemon" [isTopPokemon]="true"></app-pokemon-item></div>       
-    </ng-container>
+     <ng-container *ngFor="let pokemon of pokemons; let i = index;" >
+        <div (click)="onClick(i + 1, pokemon.name)" *ngIf="i<3" >
+            <app-pokemon-item [pokemonIndex]="i + 1" [pokemon]="pokemon" [isTopPokemon]="true">
+            </app-pokemon-item>
+        </div>       
+    </ng-container> 
+    
+    <div *ngIf="ifClickPokemon">
+        <app-pokemon-form [pokemonIndex]="clickPokemonIndex" [pokemonName]="clickPokemonName"></app-pokemon-form>
+    </div>
+    
 </div>
